# python-os

./: .gitignore  ADVANCED_FEATURES_NOW_ACTIVE.md  ARCHITECTURE.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETION_REPORT.md  ENHANCED_DESKTOP_FEATURES.md  EXPANSION_SUMMARY.md  FILE_MANIFEST.md  FILE_OPERATIONS_GUIDE.md  FINAL_PROJECT_SUMMARY.md  FIXES_APPLIED.md  GUI_GUIDE.md  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SPRINT_10_FEATURES.md  SPRINT_7_FEATURES.md  TERMINAL_QUICK_START.md  TERMINAL_USAGE_GUIDE.md  WORKING_ADVANCED_FEATURES.md  pyproject.toml  pytest.ini  requirements.txt
pyvirtos/: __init__.py  __main__.py  main.py
pyvirtos/core/: __init__.py  animation.py  app_manager.py  filesystem.py  kernel.py  logs.py  memory.py  process.py  scheduler.py  shell.py  snapshot.py  theme.py  users.py  workspace.py
pyvirtos/tests/: __init__.py  conftest.py  test_advanced_features.py  test_filesystem.py  test_integration.py  test_kernel.py  test_memory.py  test_process.py  test_scheduler.py  test_users.py  test_workspace_animation.py
pyvirtos/ui/: __init__.py  desktop.py  desktop_enhanced.py  explorer_view.py  task_manager_view.py  terminal_view.py  text_editor.py
scripts/: __init__.py  demo.py  demo_gui.py
