[tool.poetry]
name = "pyvirtos"
version = "0.1.0"
description = "A mini operating system simulator written in Python with visual + interactive GUI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pyvirtos"}]

[tool.poetry.dependencies]
python = "^3.11"
pyside6 = "^6.6.0"
textual = "^0.40.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
bcrypt = "^4.1.0"
sqlalchemy = "^2.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
pyvirtos = "pyvirtos.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
